[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ClosureCompiler"
readme = "ReadMe.md"
description = "Python bindings to Google Closure Compiler"
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache 2.0",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ClosureCompiler"]
license = {text = "Apache-2.0 AND Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"JAbs" # @ git+https://codeberg.org/KOLANICH-libs/JAbs.py
]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/ClosureCompiler.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["ClosureCompiler", "ClosureCompiler.*"]

[tool.setuptools_scm]

[tool.black]
line-length = 100500

